--- a/package.json
+++ b/package.json
@@ -6,12 +6,29 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "bcrypt": "^5.0.0",
+    "console-stamp": "^0.2.9",
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "debug": "~2.6.9",
-    "express": "~4.16.1",
+    "dotenv": "^8.2.0",
+    "express": "^4.16.4",
+    "express-session": "^1.17.1",
+    "firebase-admin": "^9.2.0",
     "http-errors": "~1.6.3",
-    "jade": "~1.11.0",
+    "log-timestamp": "^0.3.0",
+    "mathjs": "^7.3.0",
     "morgan": "~1.9.1",
-    "nd4js": "^1.3.0"
+    "mysql": "^2.18.1",
+    "mysql2": "^2.2.1",
+    "nd4js": "^1.3.0",
+    "node-cron": "^2.0.3",
+    "nunjucks": "^3.2.2",
+    "request": "^2.88.2",
+    "router": "^1.3.5",
+    "routes": "^2.1.0",
+    "secure-random": "^1.1.2",
+    "sequelize": "^6.3.5"
   }
 }
