--- a/package.json
+++ b/package.json
@@ -8,11 +8,19 @@
   "dependencies": {
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "dotenv": "^8.2.0",
     "express": "~4.16.1",
+    "express-session": "^1.17.1",
+    "fs": "0.0.1-security",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "mathjs": "^8.0.1",
-    "morgan": "~1.9.1",
-    "nd4js": "^1.3.0"
+    "morgan": "^1.9.1",
+    "multer": "^1.4.2",
+    "nd4js": "^1.3.0",
+    "nunjucks": "^3.2.2",
+    "path": "^0.12.7",
+    "request": "^2.88.2",
+    "secure-random": "^1.1.2"
   }
 }
