--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node app"
   },
   "dependencies": {
+    "axios": "^0.21.0",
     "body-parser": "^1.19.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
@@ -15,7 +16,6 @@
     "firebase-admin": "^9.4.1",
     "fs": "0.0.1-security",
     "http-errors": "~1.6.3",
-    "jade": "~1.11.0",
     "mathjs": "^8.0.1",
     "morgan": "^1.9.1",
     "multer": "^1.4.2",
