--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "firebase-admin": "^9.4.1",
     "fs": "0.0.1-security",
     "http-errors": "~1.6.3",
+    "log-timestamp": "^0.3.0",
     "mathjs": "^8.0.1",
     "morgan": "^1.9.1",
     "multer": "^1.4.2",
